samples/_failures_safe/1761144501_5fb1ee_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_70012051.c: In function ‘tokenize’:
./samples/SAFE/__tmp_70012051.c:157:13: error: expected expression at end of input
  157 |             (*
      |             ^
./samples/SAFE/__tmp_70012051.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_70012051.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_70012051.c:157:13: error: expected declaration or statement at end of input
